* [Sortable] Fixed shift of initial drag position caused by margin of list item elements

--- a/storybook/stories/Sortable/components/SortableTreeItem/SortableTreeItem.scss
+++ b/storybook/stories/Sortable/components/SortableTreeItem/SortableTreeItem.scss
@@ -41,3 +41,7 @@
     visibility: hidden;
   }
 }
+
+.tree-item.drag:first-child {
+  margin: 0;
+}
